//SystemProto.proto

syntax = "proto3"; 
package system.client.proto;

enum XY_ID {
  INVALED                     = 0;

  REQ_LOGINREWARDCONFIG       = 101;      //登录奖励列表（签到）
  RES_LOGINREWARDCONFIG       = 102;

  REQ_LOGINREWARDSIGN         = 103;      //玩家签到
  RES_LOGINREWARDSIGN         = 104;

  REQ_USERSHARE               = 105;      //分享记录
  RES_USERSHARE               = 106;
  
  REQ_USERADDCHIP             = 107;      //增加道具
  RES_USERADDCHIP             = 108;
}

message reqLoginRewardConfig {

}

message ResLoginRewardConfig {
    required sint32 status = 1;
    optional sint32 signdays = 2;   //累计签到了几天
    optional bool istodaysign = 3;  //今天是否签到了
    optional string config = 4;     //签到配置
}

message ReqLoginRewardSign {
  required sint32 signofday = 1;
}

message ResLoginRewardSign {
  required sint32 status = 1;
  optional string rewardconfig = 2; //签到奖励
}

message ReqUserShare {
}

message ResUserShare {
	required sint32 status = 1;
}

message ReqUserAddChip {
    required sint32 propid = 1;
    required sint32 propcount = 2;
    optional string config = 3;
}

message ResUserAddChip {
  required sint32 status = 1;
  optional sint32 propid = 2;
  optional sint32 propcount = 3;
  optional string config = 4;
}